--- a/src/css/workspace.css
+++ b/src/css/workspace.css
@@ -56,6 +56,7 @@
   #workspace-content {
     box-shadow: none;
     height: auto;
+    width: auto;
   }
 }
 
